Pomodoro Dashboard - Pomodoro Timer Circle Graphic Mobile Fix
Fix applied to the pomodoro timer circle graphic where in the portrait mobile orientation, the circle was too big, fixed it to be able to be in an appropriate size when in mobile portrait orientation

- JV

--- a/src/css/pages/pomodoro.css
+++ b/src/css/pages/pomodoro.css
@@ -91,6 +91,11 @@
 
 /* PORTRAIT STYLING */
 @media (max-width: 768px) and (orientation:portrait) {
+    .progress-ring__background,
+    .progress-ring__foreground {
+        r: 100;
+    }
+
     #pomodoroDashboardHomeButton,
     #pomodoroDashboardForTodayButton,
     #pomodoroDashboardEndOfDayButton {
